--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,9 @@
 </head>
 
 <body>
-
+  <div class="container">
+    <button class="button" id='startButton'>RUN THE GAME</button>
+  </div>
 </body>
 
 </html>
