Add version info

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
   <div class="container">
     <button class="button" id='startButton'>RUN THE GAME</button>
   </div>
+  <h4 class="ver-info">ver.: 0.1(alfa)</h4>
 </body>
 
 </html>
