--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,11 @@
 </head>
 
 <body>
-  <div class="container">
+  <!-- <div class="container">
     <button class="button" id='startButton'>RUN THE GAME</button>
-  </div>
-  <h4 class="ver-info">ver.: 0.1(alfa)</h4>
+  </div> -->
+  <h4 class="ver-info">ver.: 0.2(beta)</h4>
+  <div id="myCanvas"></div>
 </body>
 
 </html>
