Add controls explanation

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,11 @@
   </div> -->
   <h4 class="ver-info">ver.: 0.2(beta)</h4>
   <div id="myCanvas"></div>
+  <div class="info">
+    <p>Press <span>SPACE</span> to shot and accept option</p>
+    <p>Press <span>UP, DOWN</span> arrows to change menu option</p>
+    <p>Press <span>LEFT, RIGHT</span> arrows to move the plane</p>
+  </div>
 </body>
 
 </html>
