Add functionality - result saving

--- a/src/index.html
+++ b/src/index.html
@@ -11,13 +11,15 @@
   <!-- <div class="container">
     <button class="button" id='startButton'>RUN THE GAME</button>
   </div> -->
-  <h4 class="ver-info">ver.: 0.2(beta)</h4>
+  <h4 class="ver-info">ver.: 0.3(beta)</h4>
   <div id="myCanvas"></div>
   <div class="info">
     <p>Press <span>SPACE</span> to shot and accept option</p>
     <p>Press <span>UP, DOWN</span> arrows to change menu option</p>
     <p>Press <span>LEFT, RIGHT</span> arrows to move the plane</p>
   </div>
+  <script src="https://www.gstatic.com/firebasejs/6.6.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/6.6.0/firebase-firestore.js"></script>
 </body>
 
 </html>
