Add pause game functionality

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <!-- <div class="container">
     <button class="button" id='startButton'>RUN THE GAME</button>
   </div> -->
-  <h4 class="ver-info">ver.: 0.5(beta)</h4>
+  <h4 class="ver-info">ver.: 0.5a(beta)</h4>
   <div class="container">
     <div class="header">
       <h1>ALIEN SHOOTER</h1>
@@ -29,6 +29,7 @@
       <p>Press <span>SPACE</span> to shot and accept option</p>
       <p>Press <span>UP, DOWN</span> arrows to change menu option</p>
       <p>Press <span>LEFT, RIGHT</span> arrows to move the plane</p>
+      <p>Press <span>P</span> to pause the game</p>
     </div>
     <div class="enemies section">
       <h4>Enemies:</h4>
@@ -36,10 +37,8 @@
         <div class="image">
           <img src="../public/assets/images/enemyPlane.png" alt="enemy plane">
         </div>
-        <div class="description">
-          <p>A basic alien landing ship.
-            It can't shoot, but when it crosses the line of defense, you lose one life.</p>
-        </div>
+        <p class="description">A basic alien landing ship.
+          It can't shoot, but when it crosses the line of defense, you lose one life.</p>
       </div>
     </div>
     <div class="section weapons">
