Add info about the need to clear cache

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,8 @@
 
   </div>
   <div class="container">
-    <button id='mute' class='button'>Sound: muted</button>
+    <button id='mute' class='button'>Sound: muted</button><span class='cache-info'>Attention! - clear the cache after
+      the new version is released.</span>
   </div>
   <div id="myCanvas"></div>
   <div class="container">
