Add loading screen

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <!-- <div class="container">
     <button class="button" id='startButton'>RUN THE GAME</button>
   </div> -->
-  <h4 class="ver-info">ver.: 0.5b(beta)</h4>
+  <h4 class="ver-info">ver.: 0.6(beta)</h4>
   <div class="container">
     <div class="header">
       <h1>ALIEN SHOOTER</h1>
