Add sound icon to mute/unmute button content

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Alien shooter game</title>
+  <link rel="stylesheet" href="public/assets/icons/line-awesome/css/line-awesome.min.css">
 </head>
 
 <body>
@@ -20,7 +21,12 @@
 
   </div>
   <div class="container">
-    <button id='mute' class='button'>Sound: muted</button><span class='cache-info'>Attention! - clear the cache after
+
+    <button id='mute' class='button'>
+      <span>Sound: muted </span>
+      <i class="la la-lg la-volume-off"></i>
+    </button>
+    <span class='cache-info'>Attention! - clear the cache after
       the new version is released.</span>
   </div>
   <div id="myCanvas"></div>
